[project]
name = "flm-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SirGnip", email = "SirGnip@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
flm = "gnp.flm.cli.flm:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gnp.flm"
namespace = true
